// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render the Button component as a link variant reverse 1`] = `
<div>
  <a
    class="nhsuk-button nhsuk-button--reverse"
    data-module="nhsuk-button"
    draggable="false"
    href="https://www.nhs.uk"
    role="button"
  >
    Link
  </a>
</div>
`;

exports[`should render the Button component as a link variant secondary 1`] = `
<div>
  <a
    class="nhsuk-button nhsuk-button--secondary"
    data-module="nhsuk-button"
    draggable="false"
    href="https://www.nhs.uk"
    role="button"
  >
    Link
  </a>
</div>
`;

exports[`should render the Button component as a link variant warning 1`] = `
<div>
  <a
    class="nhsuk-button nhsuk-button--warning"
    data-module="nhsuk-button"
    draggable="false"
    href="https://www.nhs.uk"
    role="button"
  >
    Link
  </a>
</div>
`;
